Aggiunto riposizionamento pallina bianca